<resources>
    <string name="app_name">AndroKado</string>
    <string name="title_activity_settings">Configuration</string>
    <string name="article_achete_oui">Acheté</string>
    <string name="article_achete_non">A acheter</string>

    <string name="article_url_description">URL</string>
    <string name="article_url_default">...</string>
    <string name="article_url_hint">URL</string>

    <string name="article_nom_hint">article</string>

    <string name="article_description_hint">description</string>

    <string name="article_prix_hint">prix</string>

    <string name="article_monnaie_hint">monnaie</string>
    <string name="article_monnaie_default">€</string>

    <string name="liste_article_elem_achete_oui">Acheté</string>
    <string name="liste_article_elem_achete_default"></string>

    <string name="action_envoi_sms">SMS</string>
    <string name="action_envoi_sms_msg_part_1">"Pour me faire un cadeau, tu peux m\'offrir ça : "</string>
    <string name="action_envoi_sms_msg_part_2">"\nCela ne coute que "</string>
    <string name="action_envoi_sms_msg_part_3">" euros et cela me fera vraiment plaisir :) Merci !"</string>

    <string name="action_validation_detail_article">Valider</string>
    <string name="action_editer_article">Modifier</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
